--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -249,8 +249,6 @@
                     }
                 }
             }
-
-
         }
     </script>
 </head>
@@ -313,7 +311,7 @@
                 <select id="calling_code" name="phoneNumber"></select>
             </div>
             <div class="col-10">
-                <input type="text" id="phone_number" name="phoneNumber">
+                <input type="text" id="phone_number" name="phoneNumber" maxlength="10">
             </div>
         </div>
         <div class="row">
